[package]
name = "btclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bendy = { version = "0.3.3", features = ["serde"] }
bytes = "1.10.1"
clap = { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.4"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
gethostname = "1.0.2"
local-ip-address = "0.6.5"
log = { version = "0.4.27", features = ["std"] }
rand = "0.9.1"
ratatui = "0.29.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
sha1 = "0.10.6"
tokio = { version = "1.45.0", features = ["full"] }
urlencoding = "2.1.3"
